# Simple_C-Project_Build_And_Test

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  compress.cpp  main.cpp
src/include/compress/: compress.h
tests/: CMakeLists.txt  test_compressor.cpp
